[tool.poetry]
name = "javis"
version = "0.1.0"
description = ""
authors = ["Lan Nguyen <ndolanvn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.0"
langchain-ollama = "^0.2.0"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
